2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Create_assign_barcode_for_all_incoming_a__c.field-meta.xml
<CustomField>
    <fullName>Create_assign_barcode_for_all_incoming_a__c</fullName>
    <description>Create / assign barcode for all incoming artworks and crate for grading</description>
    <inlineHelpText>Create / assign barcode for all incoming artworks and crate</inlineHelpText>
    <label>Create/assign barcode for all artworks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>