2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Data_Management__c.field-meta.xml
<CustomField>
    <fullName>Data_Management__c</fullName>
    <description>Data Management:</description>
    <inlineHelpText>Data Management: 
Ensure all data is correct &amp; updated in a prompt and efficient manner</inlineHelpText>
    <label>Data Management:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>