2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Delivery_Collection__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Collection__c</fullName>
    <description>Grading  for Delivery &amp; Collection: Safe and secure loading/unloading of trucks (and containers)</description>
    <inlineHelpText>Grading  for Delivery &amp; Collection: Safe and secure loading/unloading of trucks (and containers)</inlineHelpText>
    <label>Delivery &amp; Collection:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>