2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>IF( ISPICKVAL( Contact__r.Department__c  , &apos;Operation Crew - SG&apos;) , &apos;Operation Crew - SG&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Warehouse&apos;) , &apos;Warehouse&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Registrar Crew&apos;) , &apos;Registrar Crew&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Customer service (Gallery)&apos;) , &apos;Customer service (Gallery)&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Customer service (Museum)&apos;) , &apos;Customer service (Museum)&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Customer service (Special Project)&apos;) , &apos;Customer service (Special Project)&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Shipping Department&apos;) , &apos;Shipping Department&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Accounts&apos;) , &apos;Accounts&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;Admin&apos;) , &apos;Admin&apos;,
IF( ISPICKVAL( Contact__r.Department__c  , &apos;HR&apos;) , &apos;HR&apos;,&apos;--None--&apos;
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>