2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Designation is populated from the contact object.</description>
    <formula>Contact__r.Designation_HT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Designation is populated from the contact object.</inlineHelpText>
    <label>Designation:</label>
    <type>Text</type>
</CustomField>