2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Division_Department__c.field-meta.xml
<CustomField>
    <fullName>Division_Department__c</fullName>
    <description>Division/Department: data is loaded from the Contact Object.</description>
    <formula>TEXT(Contact__r.Division__c)+&quot; / &quot;+ Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Division/Department: data is loaded from the Contact Object.</inlineHelpText>
    <label>Division/Department:</label>
    <type>Text</type>
</CustomField>