2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <description>Grading  for Documentation (proper handover with clients, Documentation, packing list, Risk Assessment, etc.)</description>
    <inlineHelpText>Grading  for Documentation (proper handover with clients, Documentation, packing list, Risk Assessment, etc.)</inlineHelpText>
    <label>Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>