2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Documentation_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Warehouse__c</fullName>
    <description>Documentation: Docusign, Permits, Shipping mark, Forwarders&apos; DO, Warehouse checklist, etc. for grading</description>
    <inlineHelpText>Documentation: Docusign, Permits, Shipping mark, Forwarders&apos; DO, Warehouse checklist, etc.</inlineHelpText>
    <label>Documentation:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>