2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Environment_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Environment_Facilities__c</fullName>
    <description>Environment / Facilities: Perform routine maintenance on facilities and make repairs as needed</description>
    <inlineHelpText>Environment / Facilities: Perform routine maintenance on facilities and making repairs as needed
 -RH &amp; Temperature: This include but does not limit to the maintenance of equipment, servicing, monitoring and generating of data to track temperature &amp; humidity control
 -Cleanliness: Monitor the safety and cleanliness of interior and exterior areas. Maintain a safe and clean warehouse at all times. Ensuring cleanliness at ALL areas including but limited to the loading bay, storage area, viewing rooms and</inlineHelpText>
    <label>Environment / Facilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>