2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender:  is populated from the contact object.</description>
    <formula>TEXT(Contact__r.Gender_HT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gender:  is populated from the contact object.</inlineHelpText>
    <label>Gender:</label>
    <type>Text</type>
</CustomField>