2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/GM__c.field-meta.xml
<CustomField>
    <fullName>GM__c</fullName>
    <label>GM</label>
    <length>250</length>
    <type>Text</type>
</CustomField>