2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Handling_for_Stone__c.field-meta.xml
<CustomField>
    <fullName>Handling_for_Stone__c</fullName>
    <description>Handling for Stone.</description>
    <inlineHelpText>Handling for Stone.</inlineHelpText>
    <label>Stone [Handling]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>