2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>Hire Date: is populated from the contact object.</description>
    <formula>Contact__r.Hire_Date_HT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hire Date: is populated from the contact object.</inlineHelpText>
    <label>Hire Date:</label>
    <type>Date</type>
</CustomField>