2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <description>HR</description>
    <inlineHelpText>HR</inlineHelpText>
    <label>HR</label>
    <length>250</length>
    <type>Text</type>
</CustomField>