2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/ID_No__c.field-meta.xml
<CustomField>
    <fullName>ID_No__c</fullName>
    <description>ID No : data is fetched from the contact object</description>
    <formula>Contact__r.ID_No_HT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ID NO:  data is fetched from the contact object</inlineHelpText>
    <label>ID No:</label>
    <type>Text</type>
</CustomField>