2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Installation_Works_on_Paper_Framed__c.field-meta.xml
<CustomField>
    <fullName>Installation_Works_on_Paper_Framed__c</fullName>
    <description>Installation - Works on Paper (Framed / Unframed]</description>
    <inlineHelpText>Installation - Works on Paper (Framed / Unframed]</inlineHelpText>
    <label>Works on Paper [Installation]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>