2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Joint_Evaluator_Name_Designation__c.field-meta.xml
<CustomField>
    <fullName>Joint_Evaluator_Name_Designation__c</fullName>
    <description>Joint Evaluator: (Name/ Designation)</description>
    <inlineHelpText>Joint Evaluator: (Name/ Designation)</inlineHelpText>
    <label>Joint Evaluator: (Name/ Designation)</label>
    <type>TextArea</type>
</CustomField>