2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Knowledge_Application_of_Salesforce_1__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Application_of_Salesforce_1__c</fullName>
    <description>Knowledge &amp; Application of Salesforce</description>
    <inlineHelpText>Knowledge &amp; Application of Salesforce</inlineHelpText>
    <label>Knowledge &amp; Application of Salesforce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>