2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Knowledge_of_installation_packing_unpk_w__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_of_installation_packing_unpk_w__c</fullName>
    <description>Knowledge of installation, packing/unpacking, crating/uncrating, fabrication of carton boxes according to sales order in Salesforce for grading</description>
    <inlineHelpText>Knowledge of installation, packing/unpacking, crating/uncrating, fabrication of carton boxes according to sales order in Salesforce</inlineHelpText>
    <label>Knowledge of installation,packing/unpack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>