2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Languages_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken__c</fullName>
    <description>Languages Spoken: is populated from the contact Object.</description>
    <formula>Contact__r.Languages_Spoken_Written_HT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Languages Spoken: is populated from the contact Object.</inlineHelpText>
    <label>Languages Spoken:</label>
    <type>Text</type>
</CustomField>