2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Level_of_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Proficiency__c</fullName>
    <description>Level of Proficiency:</description>
    <inlineHelpText>P1 - Trainee (upon joining company)						
P2 - Skilled (Confirmed Art Handler level with less than 2 years experience)						
P3 - Highly Skilled (Team Leader level with more than 2 years experience)						
P4 - Specialist (Supervisor / Special Projects Lead level with more than 3 years experience)						
P5 - Trainer (Assistant Operations Manager level and above with more than 5 years experiene)</inlineHelpText>
    <label>Level of Proficiency:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>