2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Material_Identification__c.field-meta.xml
<CustomField>
    <fullName>Material_Identification__c</fullName>
    <description>Painting (Framed &amp; Unframed) is used for Material identification of 2D Objects.</description>
    <inlineHelpText>Painting (Framed &amp; Unframed) is used for Material identification of 2D Objects.</inlineHelpText>
    <label>Painting [Material Identification]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>