2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Material_identification_Works_on_Paper__c.field-meta.xml
<CustomField>
    <fullName>Material_identification_Works_on_Paper__c</fullName>
    <description>Material identification for Works on Paper (Framed / Unframed &amp; Matted)</description>
    <inlineHelpText>Material identification for Works on Paper (Framed / Unframed &amp; Matted)</inlineHelpText>
    <label>Works on Paper [Material identification]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>